--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,62 +4,47 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:background="@color/colorAccent"
     tools:context=".MainActivity">
 
-    <TableLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="80dp"
+        android:orientation="vertical">
 
-        <TableRow
+        <LinearLayout
+            android:id="@+id/linearlayout_provide_hotspot"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
             <Button
-                android:text="Enable Hotspot"
+                android:id="@+id/button_provide_hotspot"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/button_enable"
-                android:onClick="onEnable" />
-        </TableRow>
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:onClick="goToTethererActivity"
+                android:text="@string/provide_hotspot" />
+        </LinearLayout>
 
-        <TableRow
+        <LinearLayout
+            android:id="@+id/linearlayout_access_hotspot"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
             <Button
-                android:text="Disable Hotspot"
+                android:id="@+id/button_access_hotspot"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/button_disable"
-                android:onClick="onDisable" />
-        </TableRow>
+                android:layout_weight="1"
+                android:text="@string/access_hotspot" />
+        </LinearLayout>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <Button
-                android:id="@+id/button_get_connected_devices"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="getConnectedDevices"
-                android:text="@string/get_connected_devices" />
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <TextView
-                android:id="@+id/textview_connected_devices"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </TableRow>
-    </TableLayout>
+    </LinearLayout>
 </LinearLayout>
