--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGray">#666666</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorPrimary">#ef5d55</color>
+    <color name="colorPrimaryDark">#b14640</color>
+    <color name="colorPrimaryLight">#5e2422</color>
+    <color name="colorAccent">#252525</color>
+    <color name="colorToastDefault">#666666</color>
 </resources>
