--- a/app/src/main/res/layout/row_client_list_item.xml
+++ b/app/src/main/res/layout/row_client_list_item.xml
@@ -76,7 +76,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/row_is_reachable"
+            android:text="@string/row_disconnected"
             android:textSize="6dp" />
 
         <TextView
