Added basic pulsing

--- a/app/src/main/res/layout/activity_tetherer.xml
+++ b/app/src/main/res/layout/activity_tetherer.xml
@@ -8,31 +8,11 @@
     android:orientation="vertical"
     tools:context="com.example.alanzheng.pocketcleric.TethererActivity">
 
-    <TextView
-        android:id="@+id/textview_hotspot"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="@string/hotspot"
-        android:textAllCaps="true"
-        android:textSize="30dp"
-        android:textStyle="bold" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1.3"
         android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button_disable"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="onDisable"
-            android:text="@string/disable" />
 
         <Button
             android:id="@+id/button_enable"
@@ -43,12 +23,21 @@
             android:text="@string/enable" />
 
         <Button
+            android:id="@+id/button_disable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onDisable"
+            android:text="@string/disable" />
+
+        <Button
             android:id="@+id/button_traffic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="goToTrafficMonitorActivity"
-            android:text="Traffic" />
+            android:text="Traffic"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/button_enable_server"
@@ -56,7 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="enableServer"
-            android:text="Server" />
+            android:text="Server"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/button_enable_client"
@@ -64,7 +54,25 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="enableClient"
-            android:text="Client" />
+            android:text="Client"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/button_pulse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onPulse"
+            android:text="@string/pulse"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/button_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onLogout"
+            android:text="@string/logout" />
 
     </LinearLayout>
 
@@ -153,7 +161,8 @@
             android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:background="@color/colorAccent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/textview_chat_title"
@@ -161,9 +170,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:text="@string/chat"
-                android:textColor="@color/colorWhite"
                 android:textAllCaps="true"
+                android:textColor="@color/colorWhite"
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
