--- a/app/src/main/res/layout/activity_traffic_monitor.xml
+++ b/app/src/main/res/layout/activity_traffic_monitor.xml
@@ -81,6 +81,6 @@
     </TableRow>
 
 
-    <Button android:text="Take Snapshot" android:onClick="takeSnapshot" />
+    <Button android:text="Take Snapshot" android:onClick="buttonPress" />
 
 </TableLayout>
