--- a/app/src/main/res/layout/activity_tetherer.xml
+++ b/app/src/main/res/layout/activity_tetherer.xml
@@ -27,6 +27,37 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/button_enable_server"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="enableServer"
+            android:text="Server" />
+
+        <Button
+            android:id="@+id/button_enable_client"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="enableClient"
+            android:text="Client" />
+
+        <Button
+            android:id="@+id/button_send_data"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="sendDataToAllClients"
+            android:text="Send Data" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.3"
+        android:orientation="horizontal">
+
+        <Button
             android:id="@+id/button_disable"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,22 +80,6 @@
             android:layout_weight="1"
             android:onClick="goToTrafficMonitorActivity"
             android:text="Traffic" />
-
-        <Button
-            android:id="@+id/button_enable_server"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="enableServer"
-            android:text="Server" />
-
-        <Button
-            android:id="@+id/button_enable_client"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="enableClient"
-            android:text="Client" />
 
     </LinearLayout>
 
