--- a/app/src/main/res/layout/activity_tetherer.xml
+++ b/app/src/main/res/layout/activity_tetherer.xml
@@ -11,38 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.3"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button_enable_server"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="enableServer"
-            android:text="Server" />
-
-        <Button
-            android:id="@+id/button_enable_client"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="enableClient"
-            android:text="Client" />
-
-        <Button
-            android:id="@+id/button_send_data"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="sendDataToAllClients"
-            android:text="Send Data" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.3"
+        android:layout_weight="2"
         android:orientation="horizontal">
 
         <Button
@@ -113,7 +82,7 @@
         android:id="@+id/linear_layout_searchbar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.5"
+        android:layout_weight="2"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:orientation="horizontal">
@@ -122,7 +91,8 @@
             android:id="@+id/searchbarEditText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:paddingTop="6dp"
+            android:layout_weight="2"
             android:ems="10"
             android:hint="http://youtube.com"
             android:inputType="textPersonName"
@@ -143,7 +113,7 @@
         android:layout_height="0dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_weight="8"
+        android:layout_weight="4"
         android:background="@color/colorAccent"
         android:orientation="horizontal">
 
@@ -156,7 +126,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"
+        android:layout_weight="4"
         android:orientation="horizontal">
 
         <LinearLayout
