--- a/app/src/main/res/layout/activity_tetherer.xml
+++ b/app/src/main/res/layout/activity_tetherer.xml
@@ -63,7 +63,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textview_status"
@@ -71,10 +72,37 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:textAllCaps="true"
             android:textSize="10dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:text="Placeholder"
+            android:id="@+id/textview_rx"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:textSize="12dp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <TextView
+            android:text="Placeholder"
+            android:id="@+id/textview_tx"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:textSize="12dp"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
     </LinearLayout>
 
